--- a/problems/logic.tex
+++ b/problems/logic.tex
@@ -163,7 +163,7 @@ $f$ линейна $\Leftrightarrow f(x_1, x_2, x_3) = a_0 \oplus a_1 x_1 \oplus
   \item \textit{Лексикографический порядок} на $\Sigma^*$: сначала сравниваем по длине, затем при равной длине — посимвольно слева направо.
 \end{itemize}
 
-\textbf{Доказательство.}
+\Proof
 
 Пусть существует алгоритм $E$, перечисляющий слова языка $L$ в лексикографическом порядке: $w_1, w_2, w_3, \ldots$
 
@@ -212,7 +212,7 @@ $f$ линейна $\Leftrightarrow f(x_1, x_2, x_3) = a_0 \oplus a_1 x_1 \oplus
 
 \textbf{Утверждение:} $L$ является NP-полной $\Leftrightarrow$ $\overline{L}$ является coNP-полной.
 
-\textbf{Доказательство.}
+\Proof
 
 \textbf{Часть 1.} Покажем, что $\overline{L} \in \text{coNP}$.
 
@@ -253,4 +253,4 @@ $f$ линейна $\Leftrightarrow f(x_1, x_2, x_3) = a_0 \oplus a_1 x_1 \oplus
 
 Это в точности означает, что $\text{co}(\text{NPC}) = (\text{coNP})C$.
 
-\textbf{Ответ:} Доказано. Взятие дополнения переводит NP-полные задачи в coNP-полные и обратно.
+\Endproof
