--- a/solutions/linear/18.tex
+++ b/solutions/linear/18.tex
@@ -8,7 +8,9 @@ $\varphi^*: V \rightarrow V$ называют сопряженным к $\varphi
 
 \textbf{Теорема} Для любого линейного оператора $\varphi$ над $V$ существует единственный сопряженный ему линейный оператор $\varphi^*$.
 
-\textbf{Доказательство} Запишем в матричном виде
+\Proof 
+
+Запишем в матричном виде
 $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
 \begin{equation*}
   \begin{gathered}
@@ -17,11 +19,10 @@ $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
     x^TA^T\text{Г}y = x^T\text{Г}A^*y \Rightarrow A^T\text{Г}=ГA^T, \quad A^* = \text{Г}^{-1}A^T\text{Г}
   \end{gathered}
 \end{equation*}
-ЧТД
-\\
+
+\Endproof
 
 Если $\varphi = \varphi^*$, то оператор $\varphi$ называют самосопряженным, или симметричным. Если $\varphi = -\varphi^*$, то оператор $\varphi$ называют кососимметричным.
-\\
 
 \textbf{Свойства}
 
@@ -31,7 +32,9 @@ $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
 
 \textbf{Теорема} Все корни характеристического многочлена самосопряженного преобразования -- вещественные числа
 
-\textbf{Доказательство} Предположим противное, $\exists \lambda, \overline{\lambda} \in \mathbb{C}$ -- корни $\Rightarrow \exists$ инвариантное двумерное
+\Proof
+
+Предположим противное, $\exists \lambda, \overline{\lambda} \in \mathbb{C}$ -- корни $\Rightarrow \exists$ инвариантное двумерное
 подпространство, в котором нет собственных векторов $(\varepsilon')$
 
 Сузим $A$ на него и получим $A': \varepsilon' \mapsto \varepsilon$. Перейдем в ОНБ и получим симметричную матрицу $A'$. Рассмотрим ее характеристический многочлен:
@@ -44,12 +47,15 @@ $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
   \right)
   = (\alpha - \lambda)(\beta - \lambda) - \sigma^2 = 0
 \end{equation*}
-При этом $\exists \lambda' \in \mathbb{R}$ -- корень, т.к. $D > 0$, но тогда в $\varepsilon'$ существуют собственные вектора, противоречие. ЧТД.
-\\
+При этом $\exists \lambda' \in \mathbb{R}$ -- корень, т.к. $D > 0$, но тогда в $\varepsilon'$ существуют собственные вектора, противоречие. 
+
+\Endproof
 
 \textbf{Теорема} Собственные вектора самосопряженного преобразования, отвечающие попрано различным значениям ортогональны.
 
-\textbf{Доказательство} Пусть $A$ -- самосопряженное преобразование, $\lambda_1, \lambda_2 \in \mathbb{R}, \quad \lambda_1 \neq \lambda_2$ - собственные значения, $h_1,
+\Proof 
+
+Пусть $A$ -- самосопряженное преобразование, $\lambda_1, \lambda_2 \in \mathbb{R}, \quad \lambda_1 \neq \lambda_2$ - собственные значения, $h_1,
 h_2$ -- соответсвующие им собственные вектора.
 \begin{equation*}
   \begin{gathered}
@@ -60,27 +66,41 @@ h_2$ -- соответсвующие им собственные вектора.
     \lambda_1 \neq \lambda_2 \Rightarrow (h_1, h_2) = 0 \Rightarrow h1 \bot h_2
   \end{gathered}
 \end{equation*}
-ЧТД
-\\
+
+\Endproof
 
 \textbf{Теорема} Если преобразование $A$ самосопряженное и $\varepsilon_1 \subset \varepsilon$ -- инвариант относительно $A$, то $\varepsilon_1^\bot$ тоже инвариант.
 
-\textbf{Доказательство} $\forall x \in \varepsilon_1, \forall y \in \varepsilon_1^\bot \hookrightarrow A(x) \in \varepsilon_1 \Rightarrow (A(x), y) = 0$, т.к. $A(x) \bot y$
+\Proof
 
-$\Rightarrow (x, A(y)) = 0 \Rightarrow A(y) \in \varepsilon_1^\bot \Rightarrow \varepsilon_1^\bot$ -- инвариант, ЧТД.
-\\
+$\forall x \in \varepsilon_1, \forall y \in \varepsilon_1^\bot \hookrightarrow A(x) \in \varepsilon_1 \Rightarrow (A(x), y) = 0$, т.к. $A(x) \bot y$
+
+$\Rightarrow (x, A(y)) = 0 \Rightarrow A(y) \in \varepsilon_1^\bot \Rightarrow \varepsilon_1^\bot$ -- инвариант.
+
+\Endproof
 
 \textbf{Теорема} Преобразование $\varphi: \varepsilon \rightarrow \varepsilon$ самосопряжено $\Longleftrightarrow$ существует ортонормированный базис в $\varepsilon$,
 состоящий из его собственных векторов.
 
-\textbf{Доказательство $\Leftarrow$} В одну сторону очевидно, (и в другую тоже очевидно), в базисе из собственных векторов матрица $A$ симметрична, а значит,
+\Proof
+
+\begin{enumerate}
+  \item $\Leftarrow$
+  
+  В одну сторону очевидно, (и в другую тоже очевидно), в базисе из собственных векторов матрица $A$ симметрична, а значит,
 преобразование самосопряжено.
 
-\textbf{Доказательство $\Rightarrow$} $A$ -- самосопряженное преобразование $\Rightarrow$ все корни его характеристического многочлена вещественные и можно представить
+\item $\Rightarrow$ 
+
+$A$ -- самосопряженное преобразование $\Rightarrow$ все корни его характеристического многочлена вещественные и можно представить
 $V = V_1 \bigoplus \cdots \bigoplus V_n$, где $V_i$ -- собственные подпространства $\Rightarrow V - $ инвариант как сумма инвариантных подпространств.
 
 Предположим $\varepsilon \neq V \Rightarrow dim V < dim \varepsilon \Rightarrow \dim V^\bot \geq 1$ и $V^\bot$ -- инвариант.
 
 В силу того, что все собственные значения вещественны и т.к. $V^\bot$ -- инвариант, то существует собственный вектор из $V^\bot$, но $V$ -- прямая сумма подпространств,
 и такого вектора нет, противоречие. Т.к. собственные вектора, соответствующие различным собственным значениям попарно ортогональны, то базис можно отнормировать и
-получить ОНБ, ЧТД.
+получить ОНБ.
+
+\end{enumerate}
+
+\Endproof
