remove some more cringe

--- a/solutions/linear/18.tex
+++ b/solutions/linear/18.tex
@@ -6,7 +6,7 @@ $\varphi^*: V \rightarrow V$ называют сопряженным к $\varphi
   \langle \varphi(\boldsymbol{u}), \boldsymbol{v} \rangle = \langle \boldsymbol{u}, \varphi^*(\boldsymbol{v}) \rangle
 \end{equation*}
 
-\textbf{Теорема} Для любого линейного оператора $\varphi$ над $V$ существует единственный сопряженный ему линейный оператор $\varphi^*$.
+\Th Для любого линейного оператора $\varphi$ над $V$ существует единственный сопряженный ему линейный оператор $\varphi^*$.
 
 \Proof 
 
@@ -30,7 +30,7 @@ $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
 \boldsymbol{e}_j \rangle$, $(\boldsymbol{e_{i}})_1^n$ -- базис). Отсюда следует, что если базис ортонормированный, то $A^T = A$, и обратное: если матрица оператора в
 ортонормированном базисе симметрична, то он самосопряжен.
 
-\textbf{Теорема} Все корни характеристического многочлена самосопряженного преобразования -- вещественные числа
+\Th Все корни характеристического многочлена самосопряженного преобразования -- вещественные числа
 
 \Proof
 
@@ -51,7 +51,7 @@ $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
 
 \Endproof
 
-\textbf{Теорема} Собственные вектора самосопряженного преобразования, отвечающие попрано различным значениям ортогональны.
+\Th Собственные вектора самосопряженного преобразования, отвечающие попрано различным значениям ортогональны.
 
 \Proof 
 
@@ -69,7 +69,7 @@ h_2$ -- соответсвующие им собственные вектора.
 
 \Endproof
 
-\textbf{Теорема} Если преобразование $A$ самосопряженное и $\varepsilon_1 \subset \varepsilon$ -- инвариант относительно $A$, то $\varepsilon_1^\bot$ тоже инвариант.
+\Th Если преобразование $A$ самосопряженное и $\varepsilon_1 \subset \varepsilon$ -- инвариант относительно $A$, то $\varepsilon_1^\bot$ тоже инвариант.
 
 \Proof
 
@@ -79,7 +79,7 @@ $\Rightarrow (x, A(y)) = 0 \Rightarrow A(y) \in \varepsilon_1^\bot \Rightarrow \
 
 \Endproof
 
-\textbf{Теорема} Преобразование $\varphi: \varepsilon \rightarrow \varepsilon$ самосопряжено $\Longleftrightarrow$ существует ортонормированный базис в $\varepsilon$,
+\Th Преобразование $\varphi: \varepsilon \rightarrow \varepsilon$ самосопряжено $\Longleftrightarrow$ существует ортонормированный базис в $\varepsilon$,
 состоящий из его собственных векторов.
 
 \Proof
