--- a/solutions/logic/30.tex
+++ b/solutions/logic/30.tex
@@ -8,7 +8,7 @@
 
 \Def Для $X \subset V$ \textit{множеством соседей} назовем $N(X) := \{ y \in V \mid (x, y) \in E, x \in X \}$.
 
-\textbf{Теорема Холла.}
+\Theor{Холла}
 
 В двудольном графе $G \; \exists$ паросочетание с участием всех вершин $L$.
 
