--- a/solutions/logic/31.tex
+++ b/solutions/logic/31.tex
@@ -112,7 +112,7 @@ $(t,m)=1 \iff (y,m)=1$. Следовательно
 
 $\blacksquare$
 
-\textbf{Теорема Эйлера.}
+\Theor{Эйлера}
 
 Пусть $(a, n) = 1$. Тогда $a^{\varphi(n)} \underset{n}{\equiv} 1$.
 
