--- a/solutions/linear/19.tex
+++ b/solutions/linear/19.tex
@@ -148,7 +148,7 @@
 \Theor{Критерий Сильвестра} Пусть $k$ - КФ. Пусть $B$ - её матрица. Тогда верно следующее.
 \begin{enumerate}
   \item $k$ - положительно определена $\iff$ $\forall k \in 1 \dots n \hookrightarrow \Delta_k(B) > 0$.
-  \item $k$ - отрицательно определена $\iff \forall k \in 0 \dots \left\lfloor \frac{n}{2} \right\rfloor \hookrightarrow \Delta_{2k + 1}(B) < 0, \Delta_{2k + 2}(A) > 0$.
+  \item $k$ - отрицательно определена $\iff \forall k \in 1 \dots n \hookrightarrow \sign(\Delta_k) = (-1)^k$.
 \end{enumerate}
 
 \Proof
