--- a/main.tex
+++ b/main.tex
@@ -28,4 +28,6 @@
     \input{solutions/list.tex}
     \newpage
     \input{problems/list.tex}
+    \newpage
+    \input{solutions/additional/fejer.tex}
 \end{document}
