small fixes in 14

--- a/solutions/harmonic/14.tex
+++ b/solutions/harmonic/14.tex
@@ -100,7 +100,7 @@ c_k(f) = \frac{c_k(f^{(m)})}{(ik)^m}, \quad |c_k(f)| = \frac{|c_k(f^{(m)})|}{|k|
     \leq \sum_{|k| \geq n+1} |c_k| = \sum_{|k| \geq n+1} \frac{\gamma_k}{|k|^m} \leq \left(\sum_{|k| \geq n+1} \gamma_k^2\right)^{\frac{1}{2}} \left(\sum_{|k| \geq n+1} \frac{1}{|k|^{2m}}\right)^{\frac{1}{2}}
 \end{gather*}
 
-Последняя оценка по неравенству КБШ в $l_2$. 
+Последняя оценка по неравенству КБШ в $L_2$. 
 
 Первая скобка стремится к 0, так как ряд $\sum_{k=1}^{+\infty} \gamma_k^2$ сходится.
 
