fix linear problem

--- a/problems/linear.tex
+++ b/problems/linear.tex
@@ -147,6 +147,11 @@
 
 \subsubsection{10. Ортогональное дополнение подпространства}
 
+\Note Тут мы решим две версии одной и той же задачи: простую, и посложнее. Стоит понять их разницу и не облажаться на экзамене
+
+\textbf{Условие.}
+
+
 \textbf{Условие.} В евклидовом пространстве подпространство $L$ задано системой линейных уравнений с матрицей
 \[
   \begin{pmatrix}
@@ -155,6 +160,58 @@
   \end{pmatrix}
 \]
 в ОНБ. Найти базис в ортогональном дополнении $L^\perp$ подпространства $L$.
+
+\Solution
+
+Система уравнений имеет вид
+\[
+\begin{pmatrix}
+1 & 1 & 1 & -17 \\
+2 & -13 & 0 & 1
+\end{pmatrix}
+\begin{pmatrix}
+x_1 \\
+x_2 \\
+x_3 \\
+x_4
+\end{pmatrix}
+= 0.
+\]
+
+Обозначим первую строку матрицы через $a_1^T$, а вторую через $a_2^T$. Тогда система эквивалентна
+\[
+\begin{cases}
+\langle a_1, x \rangle = 0, \\
+\langle a_2, x \rangle = 0.
+\end{cases}
+\]
+
+Тем самым подпространство $L$ состоит из всех векторов, ортогональных $a_1$ и $a_2$. Значит, ортогональное дополнение $L^\perp$ есть линейная оболочка векторов $a_1$ и $a_2$.
+
+Заметим, что ранг матрицы, задающей $L$, равен двум, так как в ней есть невырожденная подматрица
+\[
+\begin{pmatrix}
+1 & -17 \\
+0 & 1
+\end{pmatrix}.
+\]
+
+Значит, $a_1$ и $a_2$ линейно независимы, следовательно, они образуют базис в $L^\perp$.
+
+Ответ (да, мы просто переписали векторы в ответ): 
+\[
+\begin{pmatrix}
+1 \\ 1 \\ 1 \\ -17
+\end{pmatrix},
+\quad
+\begin{pmatrix}
+2 \\ -13 \\ 0 \\ 1
+\end{pmatrix}.
+\]
+
+\textbf{Условие.} В евклидовом пространстве подпространство $L$ задано линейной оболочкой системы
+векторов $(1, 1, 1, -17), (2, -13, 0, 1)$ в ОНБ. Найти систему линейных уравнений,
+задающую ортогональное дополнение L- подпространства L.
 
 \Solution
 
