--- a/solutions/harmonic/14.tex
+++ b/solutions/harmonic/14.tex
@@ -3,7 +3,7 @@
 \Note Равенство Парсеваля
 
 \[
-\int_a^b |f(x)|^2\,dx = \sum_{k=1}^{\infty} |c_k|^2,\quad c_k = \int_a^b f(x)\overline{\varphi_k(x)}\,dx.
+  \int_a^b |f(x)|^2\,dx = \sum_{k=1}^{\infty} |c_k|^2,\quad c_k = \int_a^b f(x)\overline{\varphi_k(x)}\,dx.
 \]
 
 Это верно для ортонормированной системы функций $\varphi_k(x)$ в $L^2([a, b])$ (у нас именно такая).
@@ -12,11 +12,11 @@
 
 Пусть $f \in C^{(m-1)} ([-\pi, \pi])$; $f^{(j)} (-\pi) = f^{(j)} (\pi) \;\forall j \in \{0, \dots, m-1\}$; $\exists f^{(m)}$ -- кусочно непрерывная на $[-\pi, \pi]$.
 
-Тогда 
+Тогда
 
 \begin{enumerate}
-    \item $c_k (f^{(m)}) = (ik)^m c_k(f), \; k \in \Z$.
-    \item $|c_k (f)| = \overline{o}\left(\frac{1}{|k|^m}\right), \; k \to +\infty$, причем $|c_k(f)| = \frac{\gamma_k}{|k|^m}$, где $sum_{k=1}^{+\infty} \gamma_k^2 < +\infty$.
+  \item $c_k (f^{(m)}) = (ik)^m c_k(f), \; k \in \Z$.
+  \item $|c_k (f)| = \overline{o}\left(\frac{1}{|k|^m}\right), \; k \to +\infty$, причем $|c_k(f)| = \frac{\gamma_k}{|k|^m}$, где $sum_{k=1}^{+\infty} \gamma_k^2 < +\infty$.
 \end{enumerate}
 
 \Proof
@@ -25,44 +25,47 @@
 
 \emph{База:} Для $m=1$. По определению,
 \[
-c_k(f') = \frac{1}{2\pi} \int_{-\pi}^{\pi} f'(x) e^{-ikx} \, dx.
+  c_k(f') = \frac{1}{2\pi} \int_{-\pi}^{\pi} f'(x) e^{-ikx} \, dx.
 \]
 Интегрируя по частям, положим $u = e^{-ikx}$, $dv = f'(x) \, dx$, тогда $du = -ik e^{-ikx} \, dx$, $v = f(x)$. Получаем
 \[
-c_k(f') = \frac{1}{2\pi} \left[ f(x) e^{-ikx} \Big|_{-\pi}^{\pi} + ik \int_{-\pi}^{\pi} f(x) e^{-ikx} \, dx \right].
+  c_k(f') = \frac{1}{2\pi} \left[ f(x) e^{-ikx} \Big|_{-\pi}^{\pi} + ik \int_{-\pi}^{\pi} f(x) e^{-ikx} \, dx \right].
 \]
 Поскольку $f(-\pi) = f(\pi)$, граничный член равен нулю, и $c_k(f') = ik c_k(f)$.
 
-\emph{Переход:} Предположим, что для $m-1$ верно. Тогда $c_k(f^{(m)}) = ik c_k(f^{(m-1)})$, и по предположению индукции $c_k(f^{(m-1)}) = (ik)^{m-1} c_k(f)$, следовательно, $c_k(f^{(m)}) = (ik)^m c_k(f)$.
+\emph{Переход:} Предположим, что для $m-1$ верно. Тогда $c_k(f^{(m)}) = ik c_k(f^{(m-1)})$, и по предположению индукции $c_k(f^{(m-1)}) = (ik)^{m-1} c_k(f)$,
+следовательно, $c_k(f^{(m)}) = (ik)^m c_k(f)$.
 
 Теперь пункт 2. Из пункта 1 следует, что
 \[
-c_k(f) = \frac{c_k(f^{(m)})}{(ik)^m}, \quad |c_k(f)| = \frac{|c_k(f^{(m)})|}{|k|^m}.
+  c_k(f) = \frac{c_k(f^{(m)})}{(ik)^m}, \quad |c_k(f)| = \frac{|c_k(f^{(m)})|}{|k|^m}.
 \]
-Поскольку $f^{(m)}$ --- кусочно непрерывная на компактном отрезке, она ограничена и, следовательно, интегрируема. По лемме Римана--Лебега $c_k(f^{(m)}) \to 0$ при $k \to \pm \infty$, поэтому $|c_k(f)| = o\left(\frac{1}{|k|^m}\right)$.
+Поскольку $f^{(m)}$ --- кусочно непрерывная на компактном отрезке, она ограничена и, следовательно, интегрируема. По лемме Римана--Лебега $c_k(f^{(m)}) \to 0$ при $k \to
+\pm \infty$, поэтому $|c_k(f)| = o\left(\frac{1}{|k|^m}\right)$.
 
 Далее, поскольку $f^{(m)}$ кусочно непрерывна, она принадлежит $L^2([-\pi, \pi])$ (измерима и квадрат интегрируем). Можем записать равенство Парсеваля
 \[
-\sum_{k=-\infty}^{+\infty} |c_k(f^{(m)})|^2 = \frac{1}{2\pi} \int_{-\pi}^{\pi} |f^{(m)}(x)|^2 \, dx < +\infty,
+  \sum_{k=-\infty}^{+\infty} |c_k(f^{(m)})|^2 = \frac{1}{2\pi} \int_{-\pi}^{\pi} |f^{(m)}(x)|^2 \, dx < +\infty,
 \]
-поскольку интеграл конечен. Положим $\gamma_k = |c_k(f^{(m)})|$ для $k \geq 1$ (и симметрично для отрицательных $k$, но сумма по положительным $k$ также сходится, так как ряд симметричен). Тогда $|c_k(f)| = \frac{\gamma_k}{|k|^m}$ и $\sum_{k=1}^{+\infty} \gamma_k^2 < +\infty$.
+поскольку интеграл конечен. Положим $\gamma_k = |c_k(f^{(m)})|$ для $k \geq 1$ (и симметрично для отрицательных $k$, но сумма по положительным $k$ также сходится, так
+как ряд симметричен). Тогда $|c_k(f)| = \frac{\gamma_k}{|k|^m}$ и $\sum_{k=1}^{+\infty} \gamma_k^2 < +\infty$.
 
 \Endproof
 
 \Theor{О равномерной сходимости ряда Фурье}
 
-Пусть 
+Пусть
 
 \begin{enumerate}
-    \item $f \in C^{(m-1)} [-\pi, \pi]$ ($m \geq 1$);
-    \item $\exists f^{(m)}$ -- кусочно непрерывная на $[-\pi, \pi]$;
-    \item $f^{(j)}(-\pi) = f^{(j)}(\pi) \;\forall j \in \{0, \dots, m-1\}$.
+  \item $f \in C^{(m-1)} [-\pi, \pi]$ ($m \geq 1$);
+  \item $\exists f^{(m)}$ -- кусочно непрерывная на $[-\pi, \pi]$;
+  \item $f^{(j)}(-\pi) = f^{(j)}(\pi) \;\forall j \in \{0, \dots, m-1\}$.
 \end{enumerate}
 
-Тогда ряд Фурье функции $f$ сходится к $f$ равномерно на $[-\pi, \pi]$, причем 
+Тогда ряд Фурье функции $f$ сходится к $f$ равномерно на $[-\pi, \pi]$, причем
 
 \begin{equation*}
-    |f(x) - S_n(x)| \leq \frac{\delta_n}{n^{m-\frac{1}{2}}},
+  |f(x) - S_n(x)| \leq \frac{\delta_n}{n^{m-\frac{1}{2}}},
 \end{equation*}
 
 где $\delta_n \to 0$.
@@ -74,40 +77,44 @@ c_k(f) = \frac{c_k(f^{(m)})}{(ik)^m}, \quad |c_k(f)| = \frac{|c_k(f^{(m)})|}{|k|
 Применим неравенство о среднем:
 
 \begin{equation*}
-    \frac{\gamma_k}{|k|^m} \leq \frac{1}{2} \left(\gamma_k^2 + \frac{1}{|k|^{2m}}\right)
+  \frac{\gamma_k}{|k|^m} \leq \frac{1}{2} \left(\gamma_k^2 + \frac{1}{|k|^{2m}}\right)
 \end{equation*}
 
-Ряд $\sum \frac{1}{|k|^{2m}}$ сходится, так как $2m > 1$. 
+Ряд $\sum \frac{1}{|k|^{2m}}$ сходится, так как $2m > 1$.
 
 Значит по признаку Вейерштрасса ряд $\sum_{k=1}^{\infty} \frac{\gamma_k}{|k|^m}$ сходится.
 
-Далее, 
+Далее,
 
 \begin{equation*}
-    |S_n(x)| \leq \sum_{k=-n}^n |c_k| = \sum_{k=-n}^n \frac{\gamma_k}{|k|^m},
+  |S_n(x)| \leq \sum_{k=-n}^n |c_k| = \sum_{k=-n}^n \frac{\gamma_k}{|k|^m},
 \end{equation*}
 
 откуда $\{S_n(x)\}$ сходится равномерно на $[-\pi, \pi]$ в силу признака Вейерштрасса для функциональных последовательностей.
 
-Так как $f$ удовлетворяет условию Дини на $[-\pi, \pi]$ (в силу непрерывности), а также $f(-\pi)=f(\pi)$, значит ее можно продолжить на $\R$, так чтобы условие Дини было выполнено во всех точках.
+Так как $f$ удовлетворяет условию Дини на $[-\pi, \pi]$ (в силу непрерывности), а также $f(-\pi)=f(\pi)$, значит ее можно продолжить на $\R$, так чтобы условие Дини было
+выполнено во всех точках.
 
-По теореме о поточечной сходимости, если в точке выполнено условие Дини, то ряд сходится к полусумме односторонних пределов. Но $f$ непрерывна, а значит $S_n$ сходится равномерно к $f$.
+По теореме о поточечной сходимости, если в точке выполнено условие Дини, то ряд сходится к полусумме односторонних пределов. Но $f$ непрерывна, а значит $S_n$ сходится
+равномерно к $f$.
 
 Оценим теперь $|f(x) - S_n(x)|$:
 
 \begin{gather*}
-    |f(x) - S_n(x)| = |S(x) - S_n(x)| = \left|\sum_{|k| \geq n+1} c_k e^{ikx}\right| \leq \\
-    \leq \sum_{|k| \geq n+1} |c_k| = \sum_{|k| \geq n+1} \frac{\gamma_k}{|k|^m} \leq \left(\sum_{|k| \geq n+1} \gamma_k^2\right)^{\frac{1}{2}} \left(\sum_{|k| \geq n+1} \frac{1}{|k|^{2m}}\right)^{\frac{1}{2}}
+  |f(x) - S_n(x)| = |S(x) - S_n(x)| = \left|\sum_{|k| \geq n+1} c_k e^{ikx}\right| \leq \\
+  \leq \sum_{|k| \geq n+1} |c_k| = \sum_{|k| \geq n+1} \frac{\gamma_k}{|k|^m} \leq \left(\sum_{|k| \geq n+1} \gamma_k^2\right)^{\frac{1}{2}} \left(\sum_{|k| \geq n+1}
+  \frac{1}{|k|^{2m}}\right)^{\frac{1}{2}}
 \end{gather*}
 
-Последняя оценка по неравенству КБШ в $L_2$. 
+Последняя оценка по неравенству КБШ в $L_2$.
 
 Первая скобка стремится к 0, так как ряд $\sum_{k=1}^{+\infty} \gamma_k^2$ сходится.
 
 Вторая скобка оценить через интегральный признак:
 
 \begin{gather*}
-    (\sum_{|k| \geq n+1}^{+\infty} \frac{1}{k^{2m}})^{\frac{1}{2}} \leq (\int_n^{+\infty} \frac{1}{x^{2m}} dx)^{\frac{1}{2}} = (\frac{1}{2m-1} \frac{1}{n^{2m-1}})^{\frac{1}{2}} = \sqrt{\frac{1}{2m-1}} \frac{1}{n^{m-\frac{1}{2}}}.
+  (\sum_{|k| \geq n+1}^{+\infty} \frac{1}{k^{2m}})^{\frac{1}{2}} \leq (\int_n^{+\infty} \frac{1}{x^{2m}} dx)^{\frac{1}{2}} = (\frac{1}{2m-1}
+  \frac{1}{n^{2m-1}})^{\frac{1}{2}} = \sqrt{\frac{1}{2m-1}} \frac{1}{n^{m-\frac{1}{2}}}.
 \end{gather*}
 
 В качестве $\delta_n$ берем первую скобку умноженную на $\sqrt{\frac{1}{2m-1}}$ и получаем искомое.
