--- a/solutions/additional/fejer.tex
+++ b/solutions/additional/fejer.tex
@@ -11,17 +11,17 @@
 Распишем:
 
 \begin{gather*}
-    \sigma_n(x)  = \frac{1}{n+1} \sum_{i=0}^n \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) D_i(t) \,dt = \\
-    = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) \frac{\sum_{i=0}^n D_i(t)}{n+1} \,dt = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) F_n(t) \,dt,
+  \sigma_n(x)  = \frac{1}{n+1} \sum_{i=0}^n \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) D_i(t) \,dt = \\
+  = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) \frac{\sum_{i=0}^n D_i(t)}{n+1} \,dt = \frac{1}{2\pi} \int_{-\pi}^\pi f(x-t) F_n(t) \,dt,
 \end{gather*}
 
 где $F_n(t)$ -- ядро Фейера. Распишем его:
 
 \begin{gather*}
-    F_n(t) \coloneqq \frac{\sum_{i=0}^n D_i(t)}{n+1} = \frac{1}{(n+1)\sin \frac{t}{2}} \sum_{k=0}^n \sin \left(\left(k + \frac{1}{2}\right)t\right) = \\
-    = \frac{1}{(n+1)\sin^2 \frac{t}{2}} \sum_{k=0}^n \sin\left(\frac{t}{2}\right) \sin \left(\left(k + \frac{1}{2}\right)t\right) =
-    \frac{1}{2 (n+1)\sin^2 \frac{t}{2}} \sum_{k=0}^n \left(\cos kt - \cos ((k+1) t)\right) \\
-    = \frac{1}{2 (n+1)\sin^2 \frac{t}{2}} \left(1 - \cos ((n+1)t)\right) = \frac{1}{n+1} \frac{\sin^2 \left(\frac{n+1}{2} t\right)}{\sin^2 \frac{t}{2}}
+  F_n(t) \coloneqq \frac{\sum_{i=0}^n D_i(t)}{n+1} = \frac{1}{(n+1)\sin \frac{t}{2}} \sum_{k=0}^n \sin \left(\left(k + \frac{1}{2}\right)t\right) = \\
+  = \frac{1}{(n+1)\sin^2 \frac{t}{2}} \sum_{k=0}^n \sin\left(\frac{t}{2}\right) \sin \left(\left(k + \frac{1}{2}\right)t\right) =
+  \frac{1}{2 (n+1)\sin^2 \frac{t}{2}} \sum_{k=0}^n \left(\cos kt - \cos ((k+1) t)\right) \\
+  = \frac{1}{2 (n+1)\sin^2 \frac{t}{2}} \left(1 - \cos ((n+1)t)\right) = \frac{1}{n+1} \frac{\sin^2 \left(\frac{n+1}{2} t\right)}{\sin^2 \frac{t}{2}}
 \end{gather*}
 
 \textit{(Если $\sin \frac{t}{2} = 0$, то $F_n(t) = n+1$)}
@@ -29,60 +29,60 @@
 Свойства:
 
 \begin{enumerate}
-    \item $F_n(t) \geq 0 \; \forall t \in \R$,
-    \item $F_n(t)$ -- $2\pi$-периодическая,
-    \item $\int_{-\pi}^\pi F_n(t) \,dt = 2\pi$.
+  \item $F_n(t) \geq 0 \; \forall t \in \R$,
+  \item $F_n(t)$ -- $2\pi$-периодическая,
+  \item $\int_{-\pi}^\pi F_n(t) \,dt = 2\pi$.
 \end{enumerate}
-
 
 \textbf{Теорема Фейера}
 
 Пусть $f: \R \to \Cmp$ -- $2\pi$-периодическая; $f \in |I|([-\pi, \pi])$.
 
-Тогда 
+Тогда
 \begin{enumerate}
-    \item Если $f$ равномерно непрерывна на $E \subset \R$, то $\sigma_n \overset{E}{\rightrightarrows} f$;
-    \item Если $f$ непрерывна на $\R$, то $\sigma_n \overset{\R}{\rightrightarrows} f$;
-    \item Если $f$ непрерывна в точке $x_0$, то $\sigma_n(x_0) \rightarrow f(x_0)$;
+  \item Если $f$ равномерно непрерывна на $E \subset \R$, то $\sigma_n \overset{E}{\rightrightarrows} f$;
+  \item Если $f$ непрерывна на $\R$, то $\sigma_n \overset{\R}{\rightrightarrows} f$;
+  \item Если $f$ непрерывна в точке $x_0$, то $\sigma_n(x_0) \rightarrow f(x_0)$;
 \end{enumerate}
 
 \Proof
 
 1.
 
-Заметим свойство, что $\forall \delta > 0 \int_\delta^{+\infty} \Delta_n(x) \,dx \to 0$ при $n \to \infty$.  
+Заметим свойство, что $\forall \delta > 0 \int_\delta^{+\infty} \Delta_n(x) \,dx \to 0$ при $n \to \infty$.
 
-Действительно, 
-\begin{equation*}    
-    \frac{1}{2\pi} \int_\delta^{+\infty} F_n(x) \leq \frac{1}{2\pi (n+1)} \underbrace{\int_\delta^{+\infty} \frac{dt}{\sin^2 \frac{t}{2}}}_{\text{сходится}} \to 0.
+Действительно,
+\begin{equation*}
+  \frac{1}{2\pi} \int_\delta^{+\infty} F_n(x) \leq \frac{1}{2\pi (n+1)} \underbrace{\int_\delta^{+\infty} \frac{dt}{\sin^2 \frac{t}{2}}}_{\text{сходится}} \to 0.
 \end{equation*}
 
 Обозначим
 
 \begin{equation*}
-    \Delta_n(x) = 
-    \begin{cases}
-        \frac{1}{2\pi} F_n(x), \; |x| \leq \pi, \\
-        0, \; |x| > \pi.
-    \end{cases}
+  \Delta_n(x) =
+  \begin{cases}
+    \frac{1}{2\pi} F_n(x), \; |x| \leq \pi, \\
+    0, \; |x| > \pi.
+  \end{cases}
 \end{equation*}
 
 Тогда
 
 \begin{enumerate}
-    \item 
+  \item
     \begin{gather*}
-        |\sigma_n(x) - f(x)| = |\int_{-\pi}^\pi f(x-t) \Delta_n(t) \,dt - f(x) \underbrace{\int_{-\pi}^\pi \Delta_n(t)}_{=1} \,dt| = \\
-        = |\int_{-\pi}^\pi \left(f(x-t)-f(x)\right) \Delta_n(t) \,dt| \leq |\int_{[-\delta, \delta]} \dots \,dt| + |\int_{[-\pi, \pi] \setminus [-\delta, \delta]} \dots \,dt|
+      |\sigma_n(x) - f(x)| = |\int_{-\pi}^\pi f(x-t) \Delta_n(t) \,dt - f(x) \underbrace{\int_{-\pi}^\pi \Delta_n(t)}_{=1} \,dt| = \\
+      = |\int_{-\pi}^\pi \left(f(x-t)-f(x)\right) \Delta_n(t) \,dt| \leq |\int_{[-\delta, \delta]} \dots \,dt| + |\int_{[-\pi, \pi] \setminus [-\delta, \delta]} \dots \,dt|
     \end{gather*}
 \end{enumerate}
 
-В силу равномерной непрерывности $f$, для любого $\eps$ мы можем выбрать такое $\delta$, что первый интеграл оценивается $\int_{[-\delta, \delta]} \left(f(x-t)-f(x)\right) \Delta_n(t) \,dt \leq \eps \int_{[-\delta, \delta]} \Delta_n(t) \,dt \leq \eps \cdot 1 $.
+В силу равномерной непрерывности $f$, для любого $\eps$ мы можем выбрать такое $\delta$, что первый интеграл оценивается $\int_{[-\delta, \delta]}
+\left(f(x-t)-f(x)\right) \Delta_n(t) \,dt \leq \eps \int_{[-\delta, \delta]} \Delta_n(t) \,dt \leq \eps \cdot 1 $.
 
 Во втором интеграле воспользуемся ограниченностью $f$ в силу абсолютной интегрируемости: $\exists M>0 : |f(x)| \leq M$:
 
 \begin{equation*}
-    \int_{[-\pi, \pi] \setminus [-\delta, \delta]} \left(f(x-t)-f(x)\right) \Delta_n(t) \,dt \leq 2 \cdot 2M \cdot \int_{[\delta, \pi]} \Delta_n(t)
+  \int_{[-\pi, \pi] \setminus [-\delta, \delta]} \left(f(x-t)-f(x)\right) \Delta_n(t) \,dt \leq 2 \cdot 2M \cdot \int_{[\delta, \pi]} \Delta_n(t)
 \end{equation*}
 
 Этот интеграл стремится к 0 по свойству $\Delta_n(x)$ выше.
@@ -93,8 +93,9 @@
 
 2.
 
-$f \in C(\R) \Rightarrow f \in C([-\pi, \pi]) \Rightarrow f \text{ равн. непр. на } [-\pi, \pi] \Rightarrow \sigma_n \overset{[-\pi, \pi]}{\rightrightarrows} f \Rightarrow \sigma_n \overset{\R}{\rightrightarrows} f$.
- 
+$f \in C(\R) \Rightarrow f \in C([-\pi, \pi]) \Rightarrow f \text{ равн. непр. на } [-\pi, \pi] \Rightarrow \sigma_n \overset{[-\pi, \pi]}{\rightrightarrows} f
+\Rightarrow \sigma_n \overset{\R}{\rightrightarrows} f$.
+
 3. $E = {x_0}$.
 
 \Endproof
