--- a/solutions/statistics/37.tex
+++ b/solutions/statistics/37.tex
@@ -127,7 +127,7 @@ sup_{\theta \in \Theta} \ell(\theta, X) = sup_{\eta \in \F} \ell(g^{-1}(\eta), X
 
 Пусть $\eta^* = g(\hat{\theta}^*), \ \text{т.е.} \ \hat{\theta}^* = g^{-1}(\eta^*)$. Тогда для него верно
 \[
-ell(g^{-1}(\eta^*), X) = sup_{\eta \in \F} \ell(g^{-1}(\eta), X)
+\ell(g^{-1}(\eta^*), X) = sup_{\eta \in \F} \ell(g^{-1}(\eta), X)
 \]
 Но это же означает что $\eta^*$ - точка, где достигается супремум для $\eta = g(\theta)$. А значит это и есть ОМП
 
