--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -46,7 +46,7 @@
 \Def Будем говорить, что критерий $S$ несмещенный, если $\sup\limits_{\mathbb{P} \in \mathcal{P}_0} \beta(\mathbb{P}, S) \leq \inf\limits_{\mathbb{P} \in \mathcal{P}_1}
 \beta(\mathbb{P}, S)$.
 
-\Expl Несмещенность - это некоторая <<адекватность>> критерия, то есть вероятность отвергнуть гипотезу при её верности менее, чем отвегрнуть гипотезу при её неверности.
+\Expl Несмещенность - это некоторая <<адекватность>> критерия, то есть вероятность отвергнуть гипотезу при её верности менее, чем отвегрнуть гипотезу при её неверности. Если это не так, то достаточно перевернуть критерий.
 
 \Def Пусть критерии $S, R$ уровня значимости $\varepsilon$ для проверки одной и той же гипотезы. Будем говорить, что $S$ более мощный, чем $R$, если:
 \begin{equation*}
@@ -55,44 +55,16 @@
 
 \Def Критерий называется равномерно наиболее мощным, если он мощнее остальных.
 
-\Def Пусть $X^n = (X_1, \dots, X_n)$ - выборка растущего размера.
-Тогда последовательность критериев $S_n \subset \mathcal{X}^n$ называется состоятельной, если $\forall \mathbb{P} \in \mathcal{P}_1 \hookrightarrow \beta(\mathbb{P},
-S_n) \to 1, n \to \infty$.
-
 \textbf{Лемма Неймана-Пирсона}
 
-\Def $A^C \overset{def}{=} \Omega \backslash A$
+\Def $A^C \overset{def}{=} \Omega \backslash A$ - дополнение множества $A$.
 
 \Def Гипотезы вида $H: \mathbb{P} = \mathbb{P}'$ будем называть простыми.
 
 Далее будем рассматривать проверку гипотезы $H_0: \mathbb{P} = \mathbb{P}_0$ против альтернативы $H_1: \mathbb{P} = \mathbb{P}_1$.
 Будем считать, что распределения $\mathbb{P}_0$ и $\mathbb{P}_1$ имеют плотности $p_0(x)$ и $p_1(x)$ по одной и той же мере $\mu: \mathfrak{S} \to \R^+$.
 
-\Expl Что вообще значит распределение $\mathbb{P}$ имеет плотность $p(x)$ относительно меры $\mu: \mathfrak{S} \to \R^+$? Далее автор постарается дать объяснение,
-которое в общем случае неверно, но, наверное, даст большее понимание с чем мы работаем.
-Вообще понятие <<плотности>> (необязательно вероятности) достаточно относительно, потому что плотность \textit{чего-то} существует тоже относительно \textit{чего-то}.
-Вернемся в школу на уроки физики 7 класс, ну или когда там массу проходят. Все мы помним плотность $\frac{\text{кг}}{\text{м}^3}$. Получается, плотность в контексте
-физики -- это связь между мерой массы и мерой объема.
-В контексте теории вероятности, если у нас есть, например, нормальное распределение, то плотность -- связь между вероятностью и <<длиной>> отрезка. Более формально в
-теории меры <<плотность>> определяется так.
-Пусть у нас есть две меры $\mu, \nu$. Тогда та самая <<плотность>> - это некоторая измеримая функция $f$, которая для всякого измеримого множества $E$ удовлетворяет равенству:
-\begin{equation*}
-  \mu(E) = \int\limits_{E} f(x) \nu(dx)
-\end{equation*}
-Например, в физике это преобразуется в связь массы и объёма:
-\begin{equation*}
-  M(E) = \int\limits_{E} \rho(x) V(dx) \quad \text{$\rho$ - плотность}
-\end{equation*}
-А вот в нашем любимом тервере, это преобразуется в ту самую плотность $p(x)$ распределения $\mathbb{P}$ относительно меры $\mu$.
-\begin{equation*}
-  \mathbb{P}(E) = \int\limits_{E} p(x) \mu(dx)
-\end{equation*}
-Чем может быть $\mu$? Ну, например, если у нас задача плотность на прямой, то это может быть мера Лебега.
-\begin{equation*}
-  \mathbb{P}([a, b]) = \int\limits_{[a, b]} p(x) dx
-\end{equation*}
-По-умному та самая <<плотность>> $f$ называется производной Радона-Никодима $\mu$ относительно $\nu$ и обозначается $f = \frac{d \mu}{d \nu}$ (сейчас у ML-щиков должны
-быть флешбеки про KL-дивергенцию).
+\hyperlink{lyric_measures}{\textbf{Лирическое отступление о мерах (не входит в билет)}}
 
 \Def Пусть $\lambda > 0$. Положим критерий $S_\lambda = \condset{x \in \mathcal{X}}{p_1(x) - \lambda p_0(x) \geq 0}$.
 
@@ -186,3 +158,31 @@ S_n) \to 1, n \to \infty$.
 утверждение вышедоказанной леммы, получаем требуемое.
 
 \Endproof
+
+\hypertarget{lyric_measures}{\textbf{Лирическое отступление о мерах (не входит в билет)}}
+
+\Expl Что вообще значит распределение $\mathbb{P}$ имеет плотность $p(x)$ относительно меры $\mu: \mathfrak{S} \to \R^+$? Далее автор постарается дать объяснение,
+которое в общем случае неверно, но, наверное, даст большее понимание с чем мы работаем.
+Вообще понятие <<плотности>> (необязательно вероятности) достаточно относительно, потому что плотность \textit{чего-то} существует тоже относительно \textit{чего-то}.
+Вернемся в школу на уроки физики 7 класс, ну или когда там массу проходят. Все мы помним плотность $\frac{\text{кг}}{\text{м}^3}$. Получается, плотность в контексте
+физики -- это связь между мерой массы и мерой объема.
+В контексте теории вероятности, если у нас есть, например, нормальное распределение, то плотность -- связь между вероятностью и <<длиной>> отрезка. Более формально в
+теории меры <<плотность>> определяется так.
+Пусть у нас есть две меры $\mu, \nu$. Тогда та самая <<плотность>> - это некоторая измеримая функция $f$, которая для всякого измеримого множества $E$ удовлетворяет равенству:
+\begin{equation*}
+  \mu(E) = \int\limits_{E} f(x) \nu(dx)
+\end{equation*}
+Например, в физике это преобразуется в связь массы и объёма:
+\begin{equation*}
+  M(E) = \int\limits_{E} \rho(x) V(dx) \quad \text{$\rho$ - плотность}
+\end{equation*}
+А вот в нашем любимом тервере, это преобразуется в ту самую плотность $p(x)$ распределения $\mathbb{P}$ относительно меры $\mu$.
+\begin{equation*}
+  \mathbb{P}(E) = \int\limits_{E} p(x) \mu(dx)
+\end{equation*}
+Чем может быть $\mu$? Ну, например, если у нас задача плотность на прямой, то это может быть мера Лебега.
+\begin{equation*}
+  \mathbb{P}([a, b]) = \int\limits_{[a, b]} p(x) dx
+\end{equation*}
+По-умному та самая <<плотность>> $f$ называется производной Радона-Никодима $\mu$ относительно $\nu$ и обозначается $f = \frac{d \mu}{d \nu}$ (сейчас у ML-щиков должны
+быть флешбеки про KL-дивергенцию).
