some linal & format fixes

--- a/solutions/linear/15.tex
+++ b/solutions/linear/15.tex
@@ -19,7 +19,8 @@
     \begin{itemize}
       \item $|[\mathbf{a}, \mathbf{b}]| = |\mathbf{a}| \cdot |\mathbf{b}| \sin \varphi$
       \item $[\mathbf{a}, \mathbf{b}] \perp \mathbf{a}$ и $[\mathbf{a}, \mathbf{b}] \perp \mathbf{b}$
-      \item Тройка $(\mathbf{a}, \mathbf{b}, [\mathbf{a}, \mathbf{b}])$ -- правая
+      \item Тройка $(\mathbf{a}, \mathbf{b}, [\mathbf{a}, \mathbf{b}])$ -- правая (выглядит как стандартные оси x, y, z. Или же, более формально: кратчайший поворот от
+        первого вектора $a$ ко второму $b$, наблюдаемый с конца третьего вектора $c := [a, b]$, происходит против часовой стрелки)
     \end{itemize}
     В ортонормированном базисе:
     \begin{equation*}
@@ -49,7 +50,7 @@
     Свойства:
     \begin{itemize}
       \item $(\mathbf{a}, \mathbf{b}, \mathbf{c}) = (\mathbf{b}, \mathbf{c}, \mathbf{a}) = (\mathbf{c}, \mathbf{a}, \mathbf{b})$
-      \item $(\mathbf{a}, \mathbf{b}, \mathbf{c}) = 0$ тогда и только тогда, когда векторы компланарны
+      \item $(\mathbf{a}, \mathbf{b}, \mathbf{c}) = 0$ тогда и только тогда, когда векторы компланарны (можно положить на 1 плоскость)
     \end{itemize}
 \end{enumerate}
 
