--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -46,7 +46,8 @@
 \Def Будем говорить, что критерий $S$ несмещенный, если $\sup\limits_{\mathbb{P} \in \mathcal{P}_0} \beta(\mathbb{P}, S) \leq \inf\limits_{\mathbb{P} \in \mathcal{P}_1}
 \beta(\mathbb{P}, S)$.
 
-\Expl Несмещенность - это некоторая <<адекватность>> критерия, то есть вероятность отвергнуть гипотезу при её верности менее, чем отвегрнуть гипотезу при её неверности. Если это не так, то достаточно перевернуть критерий.
+\Expl Несмещенность - это некоторая <<адекватность>> критерия, то есть вероятность отвергнуть гипотезу при её верности менее, чем отвегрнуть гипотезу при её неверности.
+Если это не так, то достаточно перевернуть критерий.
 
 \Def Пусть критерии $S, R$ уровня значимости $\varepsilon$ для проверки одной и той же гипотезы. Будем говорить, что $S$ более мощный, чем $R$, если:
 \begin{equation*}
