some more linalg fixes

--- a/solutions/linear/16.tex
+++ b/solutions/linear/16.tex
@@ -190,7 +190,7 @@ $e_1$ выразим).
 
 Далее:
 \begin{equation*}
-  \forall \alpha, \beta \in \R, \forall x, y \in \mathcal{L}' \hookrightarrow \varphi(\alpha x) + \varphi(\beta y) = \varphi(\alpha x + \beta y) \in \mathcal{L}_2
+  \forall \alpha, \beta \in \R, \forall x, y \in \mathcal{L}' \hookrightarrow \alpha\varphi(x) + \beta\varphi(y) = \varphi(\alpha x + \beta y) \in \mathcal{L}_2
 \end{equation*}
 
 \Endproof
@@ -200,7 +200,7 @@ $e_1$ выразим).
 
 \Proof
 
-Пусть $e_1, \dots e_n$ - базис $\mathcal{L}_1$. Пусть $x \in \mathcal{L}' \Rightarrow \varphi(x) = x_1 \varphi(e_1) + \dots + x_n \varphi(e_n) \Rightarrow \dim
+Пусть $e_1, \dots e_n$ - базис $\mathcal{L}'$. Пусть $x \in \mathcal{L}' \Rightarrow \varphi(x) = x_1 \varphi(e_1) + \dots + x_n \varphi(e_n) \Rightarrow \dim
 \varphi(\mathcal{L}') \leq \dim \mathcal{L}'$.
 
 \Endproof
