--- a/style.tex
+++ b/style.tex
@@ -81,6 +81,7 @@
 % облегчение математических обозначений
 \newcommand{\A}{\mathcal{A}}
 \newcommand{\M}{\mathcal{M}}
+\newcommand{\K}{\mathbb{K}}
 \newcommand{\kukarek}{\textit{(КуКаРеК) }}
 \newcommand{\F}{\mathcal{F}}
 \newcommand{\Gs}{\mathcal{G}}
