logic minor fixes

--- a/solutions/logic/27.tex
+++ b/solutions/logic/27.tex
@@ -41,7 +41,7 @@ $\blacksquare$
 
 $\square$
 
-Заметим, что каждому такому сочетанию соответствует разбиение $k$ на $n$ неотрицательных целых слагаемых с учетом порядка.
+Заметим, что каждому такому сочетанию соответствует разбиение числа $k$ на $n$ неотрицательных целых слагаемых с учетом порядка. $k = k_1 + k_2 + \dots + k_n$. Здесь $k_1$ - сколько раз взяли первый элемент, $k_2$ - второй, и т.д.
 
 Рассмотрим $k$ белых и $n-1$ чёрных шариков.
 
