fix prob common

--- a/solutions/probability/common.tex
+++ b/solutions/probability/common.tex
@@ -36,7 +36,7 @@ $\sigma$-алгебра, содержащая все открытые интер
 При этом $p_k \geq 0$ и $\sum\limits_{k} p_k = 1$.
 
 \Def Случайная величина $X$ называется \textit{абсолютно непрерывной}, если существует неотрицательная функция $f(x)$, называемая \textit{плотностью распределения},
-такая что для любого множества $B \subset \mathbb{R}$
+такая что для любого борелевского множества $B \subset \mathbb{R}$
 \[
   \mathbb{P}(X \in B) = \int_B f(x) \, dx.
 \]
