--- a/solutions/logic/31.tex
+++ b/solutions/logic/31.tex
@@ -57,16 +57,14 @@ $\square$
 
 Рассмотрим набор всех ненулевых остатков $1, 2, 3, \dots p -1$.
 
-Каждое число домножим на $a$:
-
-$a \cdot 1, a \cdot 2, \dots a \cdot (p - 1)$
+Каждое число домножим на $a$: $a \cdot 1, a \cdot 2, \dots a \cdot (p - 1)$
 
 Пусть среди них какие-то 2 дают одинаковый остаток при делении на $p$.
 
 Тогда $ai \underset{p}{\equiv} aj \implies a \cdot (i -j) \underset{p}{\equiv} 0 \implies i \underset{p}{\equiv} j$. Значит все остатки различны и образуют все ненулевые
 остатки при делении на $p$.
 
-Следовательно $1 \cdot 2 \dots (p - 1) \underset{p}{\equiv} a^{p - 1} \cdot 1 \cdot 2 \dots (p - 1)$. Но $1 \cdot 2 \dots (p - 1)$ взаимнопросто с $p$. Значит $1
+Следовательно $a^{p - 1} \cdot 1 \cdot 2 \dots (p - 1) \underset{p}{\equiv} 1 \cdot 2 \dots (p - 1)$ (т.к содержат одни и те же остатки, но возможно в разном порядке). Но $1 \cdot 2 \dots (p - 1)$ взаимнопросто с $p$. Значит $1
 \underset{p}{\equiv} a^{p -1}$.
 
 $\blacksquare$
@@ -79,11 +77,15 @@ $\blacksquare$
 
 Функция $f: \mathbb{N} \to \mathbb{N}$ называется \textit{мультипликативной}, если  $\forall a, b: (a, b) = 1 \quad f(a \cdot b) = f(a) \cdot f(b)$.
 
+\Lemma $(x, mn) = 1 \iff (x, m) = 1, (x, n) = 1$
+
 \Statement
 
 Функция Эйлера --- мультипликативная.
 
 $\square$
+
+\textbf{Вариант доказательства 1}
 
 Докажем $(m, n) = 1 \implies \varphi(mn) = \varphi(m) \varphi(n)$
 
@@ -111,6 +113,18 @@ $(t,m)=1 \iff (y,m)=1$. Следовательно
 \]
 и число таких пар равно $\varphi(n)\varphi(m)$.
 
+\textbf{Вариант доказательства 2}
+
+Рассмотрим отображение: $f : \Z_{mn} \to \Z_m \times \Z_n, \quad f(x) = (x \ mod \ m, x \ mod \ n)$
+
+По Китайской теореме об остатках, $f$ - взаимно однозначное отображение (биекция)
+
+Сузим $f$ на множество $A = \{ x \in \{1, 2, ... mn\} | (x, mn) = 1 \}$
+
+По лемме выше $(a, b) \in f(A) \iff (a, m) = 1, (a, n) = 1$. Количество таких пар - ровно $\varphi(m) \cdot \varphi(n)$.
+
+Но $f$ - биекция. Значит $\varphi(mn) = |A| = |f(A)| = \varphi(m) \cdot \varphi(n)$
+
 $\blacksquare$
 
 \Theor{Эйлера}
@@ -123,7 +137,7 @@ $\square$
 
 $r_1, r_2, \dots r_{\varphi(n)}$
 
-Домножим каждое на $a$ и рассмотрим остаток при делении на $n$. Т. к. $(a, n) = 1$, то все числа останутся взаимно простыми с $n$, при этом никакие не совпадают. Тогда
+Домножим каждое на $a$ и рассмотрим остаток при делении на $n$. Т. к. $(a, n) = 1$, то все числа останутся взаимно простыми с $n$, при этом никакие не совпадают (показывается аналогично малой т. Ферма). Тогда
 $(a r_1) (a r_2) \dots (ar_{\varphi(n)}) \underset{n}{\equiv} r_1 r_2 \dots r_{\varphi(n)} \implies a^{\varphi(n)} \underset{n}{\equiv} 1$.
 
 $\blacksquare$
