--- a/solutions/logic/32.tex
+++ b/solutions/logic/32.tex
@@ -42,7 +42,7 @@
 
 \Statement Классы Поста замкнуты.
 
-\Th Критерий Поста.
+\Theor{Критерий Поста}
 
 Система функций полна $\iff$ она не содержится полностью ни в одном классе Поста.
 
@@ -67,7 +67,7 @@ $\square$
     Рассмотрим 3 случая:
 
     \begin{enumerate}
-      \item Получили $0, 1, \neg$ --- переходим к следующему шагу.
+      \item Получили $0, 1, \neg$ (если только одну константу, вторую получить тривиально) --- переходим к следующему шагу.
       \item Получили только $0, 1$.
 
         Возьмем $f_M$ и $\alpha, \beta : \alpha \preccurlyeq \beta, f_M(\alpha) = 1, f_M(\beta) = 0$, которые найдутся по определению.
@@ -89,29 +89,31 @@ $\square$
         Поставим на места 1 --- $x$, а на места 0 --- $\overline{x}$. Соберем $\varphi_S(x)$ вида $f_S(x, \overline{x}, x, \dots)$. Тогда $\varphi_S(x) =
         \varphi_S(\overline{x})$. Значит $\varphi_S \equiv \text{const}$. С помощью отрицания получим и вторую константу.
 
-        Теперь есть $0, 1, \neg$.
-
-        Рассмотрим полином Жегалкина для $f_L$ и наименьшую степень в нем, большую 1 (с ненулевым коэффициентом).
-
-        $f_L(x) = a_0 + \dots a_i x_{i1} x_{i2} \dots x_{ik} \dots$. Отождествим $x_{i1} = y, x_{i2} = z$, $x_{i2..k} = 1$. Остальные $x_{jk} = 0$.
-
-        Тогда получим $\varphi_L(y, z)$, равную полиному от $y, z$.
-
-        То есть вида $1^{\sigma_1} + y^{\sigma_2}z^{\sigma_3} + \alpha_1 y^{\sigma_4} + \alpha_2 z^{\sigma_5}$. Уберем отрицания над переменными и получим $\alpha_0 + yz
-        + \alpha_1 y + \alpha_2 z$. Если есть $\alpha_0 = 1$, то возьмем отрицание от всей формулы и избавимся от него.
-
-        Получили формулу вида $yz + \alpha_1 y + \alpha_2 z$.
-
-        Рассмотрим случаи:
-
-        \begin{enumerate}
-          \item $\alpha_1 = \alpha_2 = 0$. Тогда получили $y \land z$.
-          \item $\alpha_1 = \alpha_2 = 1$. Формула --- $yz + y + z$. Ее отрицание даст $yz + y + z + 1 = (y + 1)(z + 1) = (\neg y) \land (\neg z)$. Уберем отриациня у
-            $y, z$ и получим $y \land z$.
-          \item $\alpha_1 \ne \alpha_2$. Пусть $\alpha_1 = 1, \alpha_2 = 0$, формула имеет вид $yz + y = (z + 1) y = (\neg z) y$. Уберем отриацине у $z$ и получим $y \land z$.
-        \end{enumerate}
-
-        Система $0, 1, \neg, \land$ полна (можно составить КНФ или ДНФ, получив \texttt{or} из законов де Моргана + есть константы).
     \end{enumerate}
+
+    Теперь есть $0, 1, \neg$.
+
+    Рассмотрим полином Жегалкина для $f_L$ и наименьшую степень в нем, большую 1 (с ненулевым коэффициентом).
+
+    $f_L(x) = a_0 + \dots a_i x_{i_1} x_{i_2} \dots x_{i_k} \dots$. Отождествим $x_{i_1} = y, x_{i_2} = z$, $x_{i_2..k} = 1$. Остальные $x_{jk} = 0$.
+
+    Тогда получим $\varphi_L(y, z)$, равную полиному от $y, z$.
+
+    То есть вида $1^{\sigma_1} + y^{\sigma_2}z^{\sigma_3} + \alpha_1 y^{\sigma_4} + \alpha_2 z^{\sigma_5}$. Уберем отрицания над переменными и получим $\alpha_0 + yz
+    + \alpha_1 y + \alpha_2 z$. Если есть $\alpha_0 = 1$, то возьмем отрицание от всей формулы и избавимся от него.
+
+    Получили формулу вида $yz + \alpha_1 y + \alpha_2 z$.
+
+    Рассмотрим случаи:
+
+    \begin{enumerate}
+      \item $\alpha_1 = \alpha_2 = 0$. Тогда получили $y \land z$.
+      \item $\alpha_1 = \alpha_2 = 1$. Формула --- $yz + y + z$. Ее отрицание даст $yz + y + z + 1 = (y + 1)(z + 1) = (\neg y) \land (\neg z)$. Уберем отриациня у
+        $y, z$ и получим $y \land z$.
+      \item $\alpha_1 \ne \alpha_2$. Пусть $\alpha_1 = 1, \alpha_2 = 0$, формула имеет вид $yz + y = (z + 1) y = (\neg z) y$. Уберем отриацине у $z$ и получим $y \land z$.
+    \end{enumerate}
+
+    Система $0, 1, \neg, \land$ полна (можно составить КНФ или ДНФ, получив \texttt{or} из законов де Моргана + есть константы).
+
 \end{itemize}
 $\blacksquare$
