--- a/solutions/logic/31.tex
+++ b/solutions/logic/31.tex
@@ -64,7 +64,8 @@ $\square$
 Тогда $ai \underset{p}{\equiv} aj \implies a \cdot (i -j) \underset{p}{\equiv} 0 \implies i \underset{p}{\equiv} j$. Значит все остатки различны и образуют все ненулевые
 остатки при делении на $p$.
 
-Следовательно $a^{p - 1} \cdot 1 \cdot 2 \dots (p - 1) \underset{p}{\equiv} 1 \cdot 2 \dots (p - 1)$ (т.к содержат одни и те же остатки, но возможно в разном порядке). Но $1 \cdot 2 \dots (p - 1)$ взаимнопросто с $p$. Значит $1
+Следовательно $a^{p - 1} \cdot 1 \cdot 2 \dots (p - 1) \underset{p}{\equiv} 1 \cdot 2 \dots (p - 1)$ (т.к содержат одни и те же остатки, но возможно в разном порядке).
+Но $1 \cdot 2 \dots (p - 1)$ взаимнопросто с $p$. Значит $1
 \underset{p}{\equiv} a^{p -1}$.
 
 $\blacksquare$
@@ -137,7 +138,8 @@ $\square$
 
 $r_1, r_2, \dots r_{\varphi(n)}$
 
-Домножим каждое на $a$ и рассмотрим остаток при делении на $n$. Т. к. $(a, n) = 1$, то все числа останутся взаимно простыми с $n$, при этом никакие не совпадают (показывается аналогично малой т. Ферма). Тогда
+Домножим каждое на $a$ и рассмотрим остаток при делении на $n$. Т. к. $(a, n) = 1$, то все числа останутся взаимно простыми с $n$, при этом никакие не совпадают
+(показывается аналогично малой т. Ферма). Тогда
 $(a r_1) (a r_2) \dots (ar_{\varphi(n)}) \underset{n}{\equiv} r_1 r_2 \dots r_{\varphi(n)} \implies a^{\varphi(n)} \underset{n}{\equiv} 1$.
 
 $\blacksquare$
