--- a/solutions/linear/19.tex
+++ b/solutions/linear/19.tex
@@ -21,67 +21,36 @@
   b(x) = \sum\limits_{k = 1}^n \alpha_k x_k^2, \alpha_k \in \{\pm 1, 0\}
 \end{equation*}
 
-Далее сформулируем метод Лангранжа.
+Далее сформулируем теорему, которая утверждает, что всякая КФ приводима к каноническому виду.
+В билете О.К. Подлипский рекомендует формулировать именно матричный метод, а не метод Лангранжа, т.к. критерий Сильвестра строится по такой же методологии.
 
 \Th Для всякой квадратичной формы существует базис, где она имеет канонический вид.
 
 \Proof
 
-Зафиксируем произвольный базис $(e_1, \dots e_n)$. Без ограничения общности считаем, что коэфициент $\alpha_{11}$ перед $x_1^2$ ненулевой.
-
-Вынесем $x_1$ за скобки.
-
-\begin{equation*}
-  b(x) = \alpha_{11} x_1^2 + x_1 (\dots) + \dots
-\end{equation*}
-
-Поделим всё на $\alpha_{11}$:
-
-\begin{equation*}
-  b(x) = \alpha_{11} \left(x_1^2 + x_1 \frac{\dots}{\alpha_{11}}\right) + \dots
-\end{equation*}
-
-Добавим и вычтем необходимое, чтобы скобку дополнить до полного квадрата:
-\begin{equation*}
-  b(x) = \alpha_{11} (x_1 + \dots)^2 + \alpha_{11} \underbrace{(\dots)}_{\text{Здесь нет $x_1$}} + \dots
-\end{equation*}
-
-Далее повторяем также для $x_2, x_3, \dots x_n$. Итого на выходе получим:
-\begin{equation*}
-  b(x) = \alpha_{11}(x_1 + \dots)^2 + \dots + \alpha_{nn} (x_n + \dots)^2
-\end{equation*}
-
-Далее делаем замену переменных вида:
-\begin{equation*}
-  x_k' = \sqrt{|\alpha_{kk}|} (x_k + \dots)
-\end{equation*}
-
-Получили базис где у нас КФ имеет канонический вид.
-
-\Endproof
-
-И еще один метод приведения КФ на каноническому виду.
-
-\Th Для всякой квадратичной формы существует базис, где она имеет канонический вид.
-
-\Proof
-
-Пусть дана матрица квадратичной формы.
-
+Пусть дана матрица квадратичной формы. Рассмотрим случаи:
 \begin{enumerate}
-  \item $b_{11} \neq 0 \Rightarrow$ Обнуляем все, что под ней и справа от нее.
-  \item $b_{11} = 0$
-    \begin{enumerate}
-      \item Справа и снизу ноль $\Rightarrow$ идем далее.
-      \item
+    \item $b_{11} \neq 0$. Занулим весь столбец снизу вычитанием из каждой строки первой, домноженной на определенный коэффициент (делая одновеременно симметричную операцию со столбцами). Затем делаем $b_{11}$ равным $\pm 1$ делением на $\sqrt{|b_{11}|}$ первой строки и первого столбца.
+    \item $b_{11} = 0$. Тогда рассмотрим три подслучая:
         \begin{enumerate}
-          \item $\exists i \in 2 \dots n: b_{ii} \neq 0 \Rightarrow$ меняем местами 1 и $i$ строку и столбец.
-          \item $\exists i \in 2 \dots n: b_{i1} \neq 0 \Rightarrow$ прибавляем $i$-ую строку к 1 и $i$-ый столбец к первому.
+            \item Справа и снизу нули, значит, идем далее.
+            \item $\exists i \in 2 \dots n: b_{ii} \neq 0$. Тогда поменяем 1-ую и $i$-ую строку местами, а затем 1 и $i$-ый столбец.  Потом переходим к первому случаю $b_{11} \neq 0$.
+            \item $\exists i \in 2 \dots n: b_{i1} \neq 0$. Тогда добавим $i$-ую строку к первой, а затем $i$-ый столбец к первому. Потом переходим к первому случаю $b_{11} \neq 0$.
         \end{enumerate}
-    \end{enumerate}
 \end{enumerate}
 
-Рекурсивно продолжаем выполнять операции для подматрицы. Если также мы параллельно будем у матрицы $E$ соответственно менять строки, то получим матрицу перехода.
+Заметим, что после выполнения алгоритма выше матрица примет следующий вид:
+\begin{equation*}
+    \begin{pmatrix}
+        \pm 1 & 0 & \dots & 0 \\
+        0 & & & \\
+        \vdots & & C & \\
+        0 & & &
+        \end{pmatrix}
+\end{equation*}
+Ясно, что $C$ симметричная матрица в силу операций выше, поэтому применим алгоритм рекурсивно к ней. 
+Если мы будем делать аналогичные действия над строками единичной матрицы, то получим матрицу перехода к базису (она невырождена в силу того, что мы выполняли только лишь элементарные преобразования), в котором форма имеет канонический вид.
+Заметим, что в силу того, что мы выполняли элементарные преобразования, матрица перехода невырождена
 
 \Endproof
 
@@ -155,44 +124,25 @@
 
 Покажем (1).
 
-Пусть $k$ положительно определена. Значит, по вышедоказанной лемме $b_{11} > 0 \Rightarrow$ обнулим все, что под ним и справа. Получим матрицу следующего вида:
+Пусть $k$ положительно определена. Перейдем к каноническому виду с помощью алгоритма из теоремы о приведении КФ к каноническому виду. 
+В силу того, что во процессе перехода к всякой строке может быть только добавлена строка выше, а ко всякому столбцу -- столбец левее, значит по сути с точки зрения подматрицы $B[1:k][1:k]$ \textit{мы делаем элементарные преобразования, примененные к строкам и столбцам одновременно, которые не меняют знак определителя}.
+Пусть мы привели $B$ к каноническому виду $B^K$. Тогда, в силу положительной определенности, $\Delta_n\left(B^K\right) = \prod\limits_{k=1}^n \underbrace{b_k}_{>0} > 0 \Rightarrow \Delta_n(B) > 0$.
 
+В другую сторону, пусть все миноры матрицы положительны. Тогда в частности $\Delta_1(B) > 0$. Опять будем использовать тот же алгоритм из теоремы о приведении КФ к каноническому виду.
+После первого шага, мы будем иметь матрицу вида:
 \begin{equation*}
-  \begin{pmatrix}
-    b_{11} & 0      & \cdots & 0      \\
-    0      & b'_{22} &        &        \\
-    \vdots &        & \ddots &        \\
-    0      &        &        & b'_{nn}
-  \end{pmatrix}
-  \quad \Delta_1 > 0
+    \begin{pmatrix}
+        1 & 0 & \dots & 0 \\
+        0 & & & \\
+        \vdots & & C & \\
+        0 & & &
+        \end{pmatrix}
 \end{equation*}
-
-Коль скоро $k$ положительно определена, значит всякое сужение это квадратичной формы положительно определенно. Значит, используя вышедоказанную лемму можно утверждать
-$\forall i \in 2 \dots n \hookrightarrow b'_{ii} > 0$.
-Значит имеем право проделывать эти шаги для поматрицы. Да $i$-ом шаге получим матрицу следующего вида:
-
-\begin{equation*}
-  \begin{pmatrix}
-    b_{11} > 0 & 0      & \cdots & 0      & \cdots & 0      \\
-    0      & b'_{22} > 0 &        &        &        &        \\
-    \vdots &        & \ddots &        &        & \vdots \\
-    0      &        &        & b'_{ii} > 0 &        & 0      \\
-    \vdots &        &        &        & \ddots & \vdots \\
-    0      &        & \cdots & 0      & \cdots & b_{nn}
-  \end{pmatrix}
-\end{equation*}
-
-Значит $\Delta_{ii}(B) > 0$.
-
-В другую сторону. Будем выполнять все те же операции и будем получать следующие оценки.
-\begin{equation*}
-  b_{11} = \Delta_1(B) > 0
-\end{equation*}
-\begin{equation*}
-  b_{22}' b_{11} = \Delta_2(B) > 0 \Rightarrow  b_{22}' > 0
-\end{equation*}
-И так далее. В конце получим, что все диагональные элементы строго больше нуля, а, значит, имеем положительную определенность.
+В силу того, что мы применили элементарные преобразования парно, знак определителя не поменялся. Тогда $\Delta_2 (B') = 1 \cdot b_2' > 0 \Rightarrow b_2 ' > 0$, т.к. $\Delta_2 (B) > 0$. Значит рекурсивно применим рассуждения и для подматрицы $C$.
+В итоге мы получим единичную матрицу, значит исходная форма положительно определена.
 
 Покажем (2). Пусть $k(x)$ отрицательно определена. Значит $-k(x)$ - положительно определена. Применим утверждение $(1)$ вместе с тем фактом, что $\det(-A) = (-1)^n \det
 A$, и получим требуемое.
+
+
 \Endproof
